assignment-details/solution/07-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dice
spec:
  rules:
  - http:
      paths:
      - path: /candidate
        pathType: Prefix
        backend:
          service:
            name: candidate-svc
            port:
              number: 8080
      - path: /job
        pathType: Prefix
        backend:
          service:
            name: job-svc
            port:
                number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-svc
            port:
              number: 80

# Install nginx ingress controller
# kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/main/deploy/static/provider/kind/deploy.yaml
